# windows-supporter

./: .cursorignore  .gitignore  AGENTS.md  PLAN.md  README.md  build.bat  dump_clipboard.py  main.py  pyproject.toml
docs/: hotfix-v0.0.3-watch-followups.md
src/apps/: KakaoManager.py  LiJaMong.py  Monitor.py  Notion.py  OneNote.py  Skype.py  Wrike.py  codex_usage_monitor.py  codex_usage_ui.py  main_ui.py  startup_apps.py  startup_apps_ui.py  wrike_ui.py
src/utils/: LibConnector.py  StartReg.py  ToolTip.py  VirtualDesktop.py  subprocess_utils.py  tray_icon.py  ui_event_pump.py  windows_process.py  windows_shortcut.py  windows_window.py
tests/: test_codex_usage_monitor_dom_contract.py
tests/e2e/: test_codex_usage_monitor_flow.py  test_notion_wrike_clipboard_flow.py
tests/e2e/fixtures/: codex-usage-page-current.html  notion-copy-indent-focus.txt  notion-copy-raw.txt
tests/unit/: test_build_env_guard.py  test_codex_usage_monitor.py  test_codex_usage_monitor_ui_coalescing.py  test_codex_usage_ui.py  test_kakao_manager_tick.py  test_main_event_pump.py  test_main_ui_codex_layout.py  test_monitor_hotkey.py  test_monitor_hotkeys.py  test_notion_wrike_transform.py  test_remove_path_with_retry.py  test_startup_apps_show_once.py
tools/: ensure_venv_ready.bat  generate_tray_icon.py  remove_path_with_retry.bat  stop_stale_pyinstaller_workers.ps1  wrike_clipboard_probe.py
